@@ -39,7 +39,7 @@
  * other compiler) or newer?
  */
 #define GCC_CHECK_VERSION(major, minor) \
-	(!defined(__clang__) && \
+	(CLANG_VERSION == 0 && \
 	 GCC_VERSION >= GCC_MAKE_VERSION(major, minor, 0))
 
 /**
@@ -47,14 +47,14 @@
  * gcc version?
  */
 #define CLANG_OR_GCC_VERSION(major, minor) \
-	(defined(__clang__) || GCC_CHECK_VERSION(major, minor))
+	(CLANG_VERSION > 0 || GCC_CHECK_VERSION(major, minor))
 
 /**
  * Are we building with gcc (not clang or any other compiler) and a
  * version older than the specified one?
  */
 #define GCC_OLDER_THAN(major, minor) \
-	(defined(__GNUC__) && !defined(__clang__) && \
+	(GCC_VERSION > 0 && CLANG_VERSION == 0 && \
 	 GCC_VERSION < GCC_MAKE_VERSION(major, minor, 0))
 
 #ifdef __clang__
